<resources>
	<string name="jdroid_appName">Jdroid Sample</string>
	<string name="home">Home</string>
	<string name="add">Add</string>
	<string name="adMob">Firebase AdMob</string>
	<string name="fragmentBanner">Fragment Banner</string>
	<string name="adReycler">Ad Recycler</string>
	<string name="activityBanner">Activity Banner</string>
	<string name="displayInterstitial">Display Interstitial</string>
	<string name="interstitialAction">Interstitial action</string>
	<string name="houseAds">House Ads</string>
	<string name="houseAd">House ad</string>
	<string name="architecture">Architecture</string>
	<string name="forceRefresh">Force Refresh</string>
	<string name="appInvite">Firebase Invites</string>
	<string name="dateTime">Date &amp; Time</string>
	<string name="datePickerDialog">Date Picker Dialog</string>
	<string name="timePickerDialog">Time Picker Dialog</string>
	<string name="glide">Glide</string>
	<string name="withActivity">withActivity</string>
	<string name="withFragment">withFragment</string>
	<string name="withApplicationContext">withApplicationContext</string>
	<string name="withNullContext">withNullContext</string>
	<string name="invalidResourceUrl">invalidResourceUrl</string>
	<string name="outOfMemory">outOfMemory</string>
	<string name="useCases">Use Cases</string>
	<string name="execute">Execute</string>
	<string name="failExecution">Fail Execution</string>
	<string name="failStartNotification">Fail Start Notification</string>
	<string name="failFinishNotification">Fail Finish Notification</string>
	<string name="failFinishFailedNotification">Fail Finish Failed Notification</string>
	<string name="noListener">No Listener (Reload fragment if you change this)</string>
	<string name="onStartUseCase">Starting Use Case</string>
	<string name="onFinishedUseCase">On Finished Use Case</string>
	<string name="onFinishedFailUseCase">On Finished Fail Use Case</string>
	<string name="manualUseCaseTrigger">Manual Use Case Trigger</string>
	<string name="onceUseCaseTrigger">Once Use Case Trigger</string>
	<string name="alwaysUseCaseTrigger">Always Use Case Trigger</string>
	<string name="useCaseTrigger">Use Case Trigger (Reload fragment if you change this)</string>
	<string name="delay">Delay (seconds)</string>
	<string name="floatingActionButton">Floating Action Button</string>
	<string name="errorDisplayer">Error Displayer</string>
	<string name="defaultErrorDisplayer">Default Error Displayer</string>
	<string name="defaultErrorDisplayerNotGoBack">Default Error Displayer (Not go back on error)</string>
	<string name="snackbarErrorDisplayer">Snackbar Error Displayer</string>
	<string name="timer">Timer</string>
	<string name="start">Start</string>
	<string name="stop">Stop</string>
	<string name="reset">Reset</string>
	<string name="firebaseDatabase">Firebase Database</string>
	<string name="firebaseCreate">Create</string>
	<string name="firebaseUpdate">Update</string>
	<string name="firebaseGetAll">Get All</string>
	<string name="firebaseRemove">Remove</string>
	<string name="firebaseDynamicLinks">Firebase Dynamic Links</string>
	<string name="linkUrl">Link Url</string>
	<string name="minVersionCode">Min Version Code</string>
	<string name="fallbackLink">Fallback Link</string>
	<string name="customAppLocation">Custom app location</string>
	<string name="utmMedium">UTM medium</string>
	<string name="utmSource">UTM source</string>
	<string name="utmCampaign">UTM campaign</string>
	<string name="utmTerm">UTM term</string>
	<string name="utmContent">UTM Content</string>
	<string name="shortLink">Short Link</string>
	<string name="longLink">Long Link</string>
	<string name="unguessable">Unguessable short link</string>
	<string name="buildLink">Build Link</string>
	<string name="shortenLink">Shorten Link</string>
	<string name="analytics">Analytics</string>
	<string name="sendExampleEvent">Send Example Event</string>
	<string name="sendExampleTransaction">Send Example Transaction</string>
	<string name="sendExampleTiming">Send Example Timing</string>
	<string name="fcm">Firebase Cloud Messaging</string>
	<string name="registerDevice">Register Device</string>
	<string name="registerDeviceAndUpdateLastActiveTimestamp">Register Device &amp; Update Last Active Timestamp</string>
	<string name="removeInstanceId">Remove Instance Id</string>
	<string name="removeDevice">Remove Device</string>
	<string name="subscribeToTopic">Subscribe to Topic</string>
	<string name="unsubscribeFromTopic">Unsubscribe from Topic</string>
	<string name="sendPush">Send Push</string>
	<string name="messageKey">Message Key</string>
	<string name="minAppVersionCode">MinAppVersionCode</string>
	<string name="minDeviceOsVersion">MinDeviceOsVersion</string>
	<string name="senderId">Sender Id</string>
	<string name="topic">Topic</string>
	<string name="googleMaps">Google Maps</string>
	<string name="fullMap">Full Map</string>
	<string name="liteModeMap">Lite Mode Map</string>
	<string name="streetView">Street View</string>
	<string name="revokeAccess">Revoke</string>
	<string name="notLogged">Not Logged</string>
	<string name="googlePlayServices">Google Play Services</string>
	<string name="checkGooglePlayServices">Check Google Play Services</string>
	<string name="openGooglePlayServices">Open Google Play Services</string>
	<string name="googlePlayGames">Google Play Games</string>
	<string name="showLeaderboard">Show Leaderboard</string>
	<string name="leaderboardId">Leaderboard Id</string>
	<string name="showAllLeaderboards">Show All Leaderboards</string>
	<string name="score">Score</string>
	<string name="submitScore">Submit Score</string>
	<string name="achievementId">Achievement Id</string>
	<string name="unlockAchievement">Unlock Achievement</string>
	<string name="incrementAchievement">Increment Achievement</string>
	<string name="showAchievements">Show Achievement</string>
	<string name="eventId">Event Id</string>
	<string name="incrementEvent">Increment Event</string>
	<string name="loadEvents">Load Events</string>
	<string name="loadCurrentPlayer">Load Current Player</string>
	<string name="loadPlayerStats">Load Player Stats</string>
	<string name="http">Http</string>
	<string name="httpGet">GET</string>
	<string name="httpPost">POST</string>
	<string name="httpPut">PUT</string>
	<string name="httpDelete">DELETE</string>
	<string name="httpPatch">PATCH</string>
	<string name="unexpectedExceptionParser">Unexpected Exception Parser</string>
	<string name="connectionExceptionParser">Connection Exception Parser</string>
	<string name="cardView">Card View</string>
	<string name="simpleCardView">Simple Card View</string>
	<string name="cardViewInsideRecyclerView">Card View inside Recycler View</string>
	<string name="cardViewTitle">Card View Title</string>
	<string name="cardViewContent">Card View Content</string>
	<string name="cardViewClickableTitle">Card View Clickable Title</string>
	<string name="cardViewClickableContent">Card View Clickable Content</string>
	<string name="navDrawer">Nav Drawer</string>
	<string name="leftCustomNavDrawer">Left Custom Nav Drawer</string>
	<string name="rightCustomNavDrawer">Right Custom Nav Drawer</string>
	<string name="noNavDrawer">No Nav Drawer</string>
	<string name="userNavDrawer">User Nav Drawer</string>
	<string name="inAppBilling">Google In App Billing</string>
	<string name="notifications">Notifications</string>
	<string name="notificationName">Notification name</string>
	<string name="notificationChannel">Notification channel</string>
	<string name="contentTitle">Content title</string>
	<string name="contentText">Content text</string>
	<string name="url">Url</string>
	<string name="largeIconUrl">Large icon url</string>
	<string name="largeIconDrawable">Large icon drawable</string>
	<string name="sendNotification">Send Notification</string>
	<string name="cancelNotifications">Cancel Notifications</string>
	<string name="contentTitleSample">Title example</string>
	<string name="contextTextSample">Description example</string>
	<string name="lowImportanceNotificationChannelName">Notification channel lowImportance</string>
	<string name="defaultImportanceNotificationChannelName">Notification channel defaultImportance</string>
	<string name="highImportanceNotificationChannelName">Notification channel highImportance</string>
	<string name="toasts">Toasts</string>
	<string name="displayToastFromUIThread">Display Toast From UI Thread</string>
	<string name="toastFromUIThread">Toast From UI Thread</string>
	<string name="displayToastFromWorkerThread">Display Toast From Worker Thread</string>
	<string name="toastFromWorkerThread">Toast From Worker Thread</string>
	<string name="tablets">Tablets</string>
	<string name="leftAction">Left Action</string>
	<string name="rightAction">Right Action</string>
	<string name="twitter">Twitter</string>
	<string name="listTweetHelper">List Tweet Helper</string>
	<string name="cyclingTweetHelper">Cycling Tweet Helper</string>
	<string name="uriMapper">Uri Mapper</string>
	<string name="uriMapperSingleTop">Single Top</string>
	<string name="uriMapperNoFlags">No Flags</string>
	<string name="matchError">Match Error</string>
	<string name="mainIntentError">Main Intent Error</string>
	<string name="defaultIntentError">Default Intent Error</string>
	<string name="matchNewActivity">Match New Activity</string>
	<string name="noMatchNewActivity">No Match New Activity</string>
	<string name="matchSameActivity">Match Same Activity</string>
	<string name="noMatchSameActivity">No Match Same Activity</string>
	<string name="matchNullIntent">Match Null Intent</string>
	<string name="noMatchNullIntent">No Match Null Intent</string>
	<string name="loading">Loading &amp; Refresh</string>
	<string name="blockingLoading">Blocking Loading</string>
	<string name="customBlockingLoading">Custom Blocking Loading</string>
	<string name="showLoading">Show Loading</string>
	<string name="dismissLoading">Dismiss Loading</string>
	<string name="nonBlockingLoading">Non Blocking Loading</string>
	<string name="swipeRefresLoading">Swipe Refresh Loading</string>
	<string name="fail">Fail</string>
	<string name="hero">Hero &amp; Parallax</string>
	<string name="rateApp">Rate App</string>
	<string name="recyclerView">Recycler View</string>
	<string name="simpleRecycler">Simple Recycler</string>
	<string name="complexRecycler">Complex Recycler</string>
	<string name="paginatedRecycler">Paginated Recycler</string>
	<string name="paginatedGridRecycler">Paginated Grid Recycler</string>
	<string name="searchPaginatedRecycler">Search Paginated Recycler</string>
	<string name="addItem">Add Item</string>
	<string name="addItems">Add Items</string>
	<string name="removeFirstItem">Remove First Item</string>
	<string name="removeSecondItem">Remove Second Item</string>
	<string name="addHeader">Add header</string>
	<string name="addClickableHeader">Add clickable header</string>
	<string name="removeHeader">Remove header</string>
	<string name="addFooter">Add footer</string>
	<string name="addClickableFooter">Add clickable footer</string>
	<string name="removeFooter">Remove footer</string>
	<string name="clearItems">Clear Items</string>
	<string name="workerService">Worker Service</string>
	<string name="firebaseJobService">Firebase Job Service</string>
	<string name="commandService1">Command Service 1</string>
	<string name="commandService2">Command Service 2</string>
	<string name="commandService3">Command Service 3</string>
	<string name="commandService4">Command Service 4</string>
	<string name="cancelAllJobs">Cancel All Jobs</string>
	<string name="firebaseJobServiceDescription">Success or UnexpectedException.</string>
	<string name="commandService1Description">Success or UnexpectedException</string>
	<string name="commandService2Description">Success or ConnectionException</string>
	<string name="commandService3Description">Success after 30 seconds</string>
	<string name="commandService4Description">Minimum time between executions: 1 minute</string>
</resources>