<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
	  xmlns:app="http://schemas.android.com/apk/res-auto">
	<item android:id="@+id/addItem"
		  android:title="@string/addItem"
		  app:showAsAction="never" />
	<item android:id="@+id/addItems"
		  android:title="@string/addItems"
		  app:showAsAction="never" />
	<item android:id="@+id/replaceWithSameItems"
		  android:title="@string/replaceWithSameItems"
		  app:showAsAction="never" />
	<item android:id="@+id/replaceWithDifferentItems"
		  android:title="@string/replaceWithDifferentItems"
		  app:showAsAction="never" />
	<item android:id="@+id/addHeader"
		  android:title="@string/addHeader"
		  app:showAsAction="never" />
	<item android:id="@+id/addClickableHeader"
		  android:title="@string/addClickableHeader"
		  app:showAsAction="never" />
	<item android:id="@+id/removeHeader"
		  android:title="@string/removeHeader"
		  app:showAsAction="never" />
	<item android:id="@+id/addFooter"
		  android:title="@string/addFooter"
		  app:showAsAction="never" />
	<item android:id="@+id/addClickableFooter"
		  android:title="@string/addClickableFooter"
		  app:showAsAction="never" />
	<item android:id="@+id/removeFooter"
		  android:title="@string/removeFooter"
		  app:showAsAction="never" />
	<item android:id="@+id/removeFirstItem"
		  android:title="@string/removeFirstItem"
		  app:showAsAction="never" />
	<item android:id="@+id/removeSecondItem"
		  android:title="@string/removeSecondItem"
		  app:showAsAction="never" />
	<item android:id="@+id/clearItems"
		  android:title="@string/clearItems"
		  app:showAsAction="never" />
</menu>