<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
			android:layout_width="match_parent"
			android:layout_height="match_parent">

	<LinearLayout android:layout_width="match_parent"
				  android:layout_height="wrap_content"
				  android:orientation="vertical"
				  android:padding="8dp">

		<Button android:id="@+id/registerDevice"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/registerDevice" />

		<Button android:id="@+id/registerDeviceAndUpdateLastActiveTimestamp"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/registerDeviceAndUpdateLastActiveTimestamp" />

		<Button android:id="@+id/removeInstanceId"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/removeInstanceId" />

		<Button android:id="@+id/removeDevice"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/removeDevice" />

		<com.google.android.material.textfield.TextInputLayout android:layout_width="match_parent"
															   android:layout_height="wrap_content">

			<EditText android:id="@+id/topicToSubscribe"
					  android:layout_width="match_parent"
					  android:layout_height="wrap_content"
					  android:inputType="text"
					  android:hint="@string/topic"
					  android:importantForAutofill="no" />
		</com.google.android.material.textfield.TextInputLayout>

		<Button android:id="@+id/subscribeToTopic"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/subscribeToTopic" />

		<Button android:id="@+id/unsubscribeFromTopic"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/unsubscribeFromTopic" />

		<com.google.android.material.textfield.TextInputLayout android:layout_width="match_parent"
															   android:layout_height="wrap_content"
															   android:layout_marginTop="20dp">

			<EditText android:id="@+id/topic"
					  android:layout_width="match_parent"
					  android:layout_height="wrap_content"
					  android:inputType="text"
					  android:hint="@string/topic"
					  android:importantForAutofill="no" />
		</com.google.android.material.textfield.TextInputLayout>

		<com.google.android.material.textfield.TextInputLayout android:layout_width="match_parent"
															   android:layout_height="wrap_content">

			<EditText android:id="@+id/messageKey"
					  android:layout_width="match_parent"
					  android:layout_height="wrap_content"
					  android:inputType="text"
					  android:hint="@string/messageKey"
					  android:importantForAutofill="no" />
		</com.google.android.material.textfield.TextInputLayout>

		<com.google.android.material.textfield.TextInputLayout android:layout_width="match_parent"
															   android:layout_height="wrap_content">

			<EditText android:id="@+id/minAppVersionCode"
					  android:inputType="number"
					  android:layout_width="match_parent"
					  android:layout_height="wrap_content"
					  android:hint="@string/minAppVersionCode"
					  android:importantForAutofill="no" />
		</com.google.android.material.textfield.TextInputLayout>

		<com.google.android.material.textfield.TextInputLayout android:layout_width="match_parent"
															   android:layout_height="wrap_content">

			<EditText android:id="@+id/minDeviceOsVersion"
					  android:inputType="number"
					  android:layout_width="match_parent"
					  android:layout_height="wrap_content"
					  android:hint="@string/minDeviceOsVersion"
					  android:importantForAutofill="no" />
		</com.google.android.material.textfield.TextInputLayout>

		<com.google.android.material.textfield.TextInputLayout android:layout_width="match_parent"
															   android:layout_height="wrap_content">

			<EditText android:id="@+id/senderId"
					  android:inputType="number"
					  android:layout_width="match_parent"
					  android:layout_height="wrap_content"
					  android:hint="@string/senderId"
					  android:importantForAutofill="no" />
		</com.google.android.material.textfield.TextInputLayout>

		<Button android:id="@+id/sendPush"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/sendPush" />

	</LinearLayout>
</ScrollView>