<?xml version="1.0" encoding="utf-8"?>
<com.jdroid.android.loading.LoadingLayout xmlns:android="http://schemas.android.com/apk/res/android"
										  android:id="@+id/loadingLayout"
										  android:layout_width="match_parent"
										  android:layout_height="match_parent">

	<ScrollView
			android:layout_width="match_parent"
			android:layout_height="match_parent">

		<LinearLayout
				android:id="@+id/container"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:orientation="vertical"
				android:padding="8dp">

			<com.google.android.gms.common.SignInButton
					android:id="@+id/signIn"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_gravity="center_horizontal"
					android:layout_marginTop="20dp" />

			<Button
					android:id="@+id/signOut"
					android:layout_height="wrap_content"
					android:layout_width="wrap_content"
					style="@style/jdroid_raisedButton"
					android:layout_gravity="center_horizontal"
					android:minWidth="200dp"
					android:layout_marginTop="20dp"
					android:text="@string/jdroid_logout" />

			<Button
					android:id="@+id/revoke"
					android:layout_height="wrap_content"
					android:layout_width="wrap_content"
					style="@style/jdroid_raisedButton"
					android:layout_gravity="center_horizontal"
					android:minWidth="200dp"
					android:layout_marginTop="20dp"
					android:text="@string/revokeAccess" />

			<LinearLayout
					android:id="@+id/gameContainer"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:orientation="vertical">


				<Button
						android:id="@+id/showAllLeaderboards"
						android:layout_height="wrap_content"
						android:layout_width="wrap_content"
						style="@style/jdroid_raisedButton"
						android:layout_gravity="center_horizontal"
						android:minWidth="200dp"
						android:layout_marginTop="20dp"
						android:text="@string/showAllLeaderboards" />

				<EditText
						android:id="@+id/leaderboardId"
						android:layout_width="200dp"
						android:layout_height="wrap_content"
						android:inputType="text"
						android:layout_gravity="center_horizontal"
						android:hint="@string/leaderboardId"
						android:importantForAutofill="no" />


				<Button
						android:id="@+id/showLeaderboard"
						android:layout_height="wrap_content"
						android:layout_width="wrap_content"
						style="@style/jdroid_raisedButton"
						android:layout_gravity="center_horizontal"
						android:minWidth="200dp"
						android:layout_marginTop="20dp"
						android:text="@string/showLeaderboard" />

				<EditText
						android:id="@+id/score"
						android:layout_width="200dp"
						android:layout_height="wrap_content"
						android:inputType="text"
						android:layout_gravity="center_horizontal"
						android:hint="@string/score"
						android:importantForAutofill="no" />


				<Button
						android:id="@+id/submitScore"
						android:layout_height="wrap_content"
						android:layout_width="wrap_content"
						style="@style/jdroid_raisedButton"
						android:layout_gravity="center_horizontal"
						android:minWidth="200dp"
						android:layout_marginTop="20dp"
						android:text="@string/submitScore" />

				<EditText
						android:id="@+id/achievementId"
						android:layout_width="200dp"
						android:layout_height="wrap_content"
						android:inputType="text"
						android:layout_gravity="center_horizontal"
						android:hint="@string/achievementId"
						android:importantForAutofill="no" />


				<Button
						android:id="@+id/unlockAchievement"
						android:layout_height="wrap_content"
						android:layout_width="wrap_content"
						style="@style/jdroid_raisedButton"
						android:layout_gravity="center_horizontal"
						android:minWidth="200dp"
						android:layout_marginTop="20dp"
						android:text="@string/unlockAchievement" />

				<Button
						android:id="@+id/incrementAchievement"
						android:layout_height="wrap_content"
						android:layout_width="wrap_content"
						style="@style/jdroid_raisedButton"
						android:layout_gravity="center_horizontal"
						android:minWidth="200dp"
						android:layout_marginTop="20dp"
						android:text="@string/incrementAchievement" />

				<Button
						android:id="@+id/showAchievements"
						android:layout_height="wrap_content"
						android:layout_width="wrap_content"
						style="@style/jdroid_raisedButton"
						android:layout_gravity="center_horizontal"
						android:minWidth="200dp"
						android:layout_marginTop="20dp"
						android:text="@string/showAchievements" />

				<EditText
						android:id="@+id/eventId"
						android:layout_width="200dp"
						android:layout_height="wrap_content"
						android:inputType="text"
						android:layout_gravity="center_horizontal"
						android:hint="@string/eventId"
						android:importantForAutofill="no" />

				<Button
						android:id="@+id/incrementEvent"
						android:layout_height="wrap_content"
						android:layout_width="wrap_content"
						style="@style/jdroid_raisedButton"
						android:layout_gravity="center_horizontal"
						android:minWidth="200dp"
						android:layout_marginTop="20dp"
						android:text="@string/incrementEvent" />

				<Button
						android:id="@+id/loadEvents"
						android:layout_height="wrap_content"
						android:layout_width="wrap_content"
						style="@style/jdroid_raisedButton"
						android:layout_gravity="center_horizontal"
						android:minWidth="200dp"
						android:layout_marginTop="20dp"
						android:text="@string/loadEvents" />

				<Button
						android:id="@+id/loadCurrentPlayer"
						android:layout_height="wrap_content"
						android:layout_width="wrap_content"
						style="@style/jdroid_raisedButton"
						android:layout_gravity="center_horizontal"
						android:minWidth="200dp"
						android:layout_marginTop="20dp"
						android:text="@string/loadCurrentPlayer" />

				<Button
						android:id="@+id/loadPlayerStats"
						android:layout_height="wrap_content"
						android:layout_width="wrap_content"
						style="@style/jdroid_raisedButton"
						android:layout_gravity="center_horizontal"
						android:minWidth="200dp"
						android:layout_marginTop="20dp"
						android:text="@string/loadPlayerStats" />

			</LinearLayout>

			<TextView
					android:id="@+id/status"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_gravity="center_horizontal"
					android:layout_marginTop="20dp" />

		</LinearLayout>

	</ScrollView>

</com.jdroid.android.loading.LoadingLayout>