<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
			android:layout_width="match_parent"
			android:layout_height="wrap_content">

	<LinearLayout android:layout_width="match_parent"
				  android:layout_height="wrap_content"
				  android:orientation="vertical"
				  android:padding="8dp">

		<com.google.android.material.textfield.TextInputLayout android:layout_width="match_parent"
															   android:layout_height="wrap_content"
															   android:layout_marginTop="20dp">

			<EditText android:id="@+id/notificationName"
					  android:layout_width="match_parent"
					  android:layout_height="wrap_content"
					  android:inputType="text"
					  android:hint="@string/notificationName" />
		</com.google.android.material.textfield.TextInputLayout>

		<com.google.android.material.textfield.TextInputLayout android:layout_width="match_parent"
															   android:layout_height="wrap_content"
															   android:layout_marginTop="20dp">

			<EditText android:id="@+id/notificationChannel"
					  android:layout_width="match_parent"
					  android:layout_height="wrap_content"
					  android:inputType="text"
					  android:hint="@string/notificationChannel" />
		</com.google.android.material.textfield.TextInputLayout>

		<com.google.android.material.textfield.TextInputLayout android:layout_width="match_parent"
															   android:layout_height="wrap_content"
															   android:layout_marginTop="20dp">

			<EditText android:id="@+id/contentTitle"
					  android:layout_width="match_parent"
					  android:layout_height="wrap_content"
					  android:inputType="text"
					  android:hint="@string/contentTitle" />
		</com.google.android.material.textfield.TextInputLayout>

		<com.google.android.material.textfield.TextInputLayout android:layout_width="match_parent"
															   android:layout_height="wrap_content"
															   android:layout_marginTop="20dp">

			<EditText android:id="@+id/contentText"
					  android:layout_width="match_parent"
					  android:layout_height="wrap_content"
					  android:inputType="text"
					  android:hint="@string/contentText" />
		</com.google.android.material.textfield.TextInputLayout>

		<com.google.android.material.textfield.TextInputLayout android:layout_width="match_parent"
															   android:layout_height="wrap_content"
															   android:layout_marginTop="20dp">

			<EditText android:id="@+id/url"
					  android:inputType="textUri"
					  android:layout_width="match_parent"
					  android:layout_height="wrap_content"
					  android:hint="@string/url" />
		</com.google.android.material.textfield.TextInputLayout>

		<com.google.android.material.textfield.TextInputLayout android:layout_width="match_parent"
															   android:layout_height="wrap_content"
															   android:layout_marginTop="20dp">

			<EditText android:id="@+id/largeIconUrl"
					  android:inputType="textUri"
					  android:layout_width="match_parent"
					  android:layout_height="wrap_content"
					  android:hint="@string/largeIconUrl" />
		</com.google.android.material.textfield.TextInputLayout>

		<com.google.android.material.textfield.TextInputLayout android:layout_width="match_parent"
															   android:layout_height="wrap_content"
															   android:layout_marginTop="20dp">

			<CheckBox android:id="@+id/largeIconDrawable"
					  android:layout_width="wrap_content"
					  android:layout_height="wrap_content"
					  android:hint="@string/largeIconDrawable" />
		</com.google.android.material.textfield.TextInputLayout>

		<Button android:id="@+id/sendNotification"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/sendNotification" />

		<Button android:id="@+id/cancelNotifications"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/cancelNotifications" />

	</LinearLayout>

</ScrollView>
